Added different solutions...